Feature management Snapshot (#44621)
* Feature Snapshot support

* Removing dead code

* Missing copyright

* Adding back Feature Filter telemetry

* Adding tests and simplifying code

* Update URI usage

* Update AzureAppConfigDataLoader.java